Fix[abilities-list]: Update stlying so that descriptions are not truncated

--- a/src/app/pokemon-info/abilities-list.component.css
+++ b/src/app/pokemon-info/abilities-list.component.css
@@ -3,7 +3,7 @@
     background-color: azure;
     max-width: 200px;
     min-height: 12vh;
-    max-height: 15vh;
+    max-height: 20vh;
 }
 
 .card-header {
